--- a/src/app/dialogs/view-food/view-food.component.html
+++ b/src/app/dialogs/view-food/view-food.component.html
@@ -51,6 +51,20 @@
           <label for="price">ລາຄາຂາຍ</label>
           <input type="number" class="form-control" [readOnly]="priceCostDisable" id="price" formControlName="price">
         </div>
+
+
+        <div class="form-group col-md-6">
+          <label for="deriveryCost">ຕົ້ນທຶນ ແບບຈັດສົ່ງ</label>
+          <input type="number" class="form-control" [readOnly]="priceCostDisable" id="deriveryCost"
+            formControlName="deriveryCost">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="deriveryPrice">ລາຄາຂາຍ ແບບຈັດສົ່ງ</label>
+          <input type="number" class="form-control" [readOnly]="priceCostDisable" id="deriveryPrice"
+            formControlName="deriveryPrice">
+        </div>
+
+
         <div class="form-group col-md-6">
           <label for="discId">ຈານ</label>
           <select class="form-control" id="discId" required formControlName="discId">
