--- a/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
+++ b/src/app/pages/kitchen-report-admin/kitchen-report-admin.component.html
@@ -29,6 +29,9 @@
           </form>
         </div>
       </div>
+
+
+
       <div class="mainReportDetail" [ngClass]="viewReport">
         <div class="card">
           <div class="card-header">
@@ -38,14 +41,49 @@
               <span class="font-weight-bold" style="color: greenyellow;">{{ endDate | date: 'dd-MMM-yyyy' }}</span>
             </div>
           </div>
+
+
           <div class="card-body">
             <div class="row">
               <div class="col col-md3">
-                <div class="card">
-                  <div class="card-header h4">
-                    ຍອດຂາຍຕາມອາຫານ
-                  </div>
-                  <div class="card-body" style="max-height: 50vh;overflow: auto;">
+
+                <mat-tab-group>
+                  <mat-tab label="ລາຍການອາຫານທັງໝົດ">
+                    <div class="card">
+                      <div class="card-header h4">
+                        ຍອດຂາຍຕາມອາຫານ
+                      </div>
+                      <div class="card-body" style="max-height: 50vh;overflow: auto;">
+                        <div class="table-responsive">
+                          <table class="table table-bordered table-hover" style="margin: 0;">
+                            <thead class="thead-light">
+                              <th class="text-center h6">#</th>
+                              <th class="text-center h6">ອາຫານ</th>
+                              <th class="text-center h6">ຈຳນວນ</th>
+                              <th class="text-center h6">ລວມຕົ້ນທຶນ</th>
+                            </thead>
+                            <tbody>
+                              <tr *ngFor="let trx of foodsTransactions ; let i  = index">
+                                <td class="text-center">{{ i+1 }}</td>
+                                <td class="text-left text-nowrap" style="width: 300px;">{{ trx.oFoodName }}</td>
+                                <td class="text-right">{{ trx.quantity |number }}</td>
+                                <td class="text-right">{{ trx.total_cost | number }}</td>
+                              </tr>
+                              <tr>
+                                <td class="text-center h6" colspan="2">ລວມ</td>
+                                <td class="text-right h6">{{ countItem | number }}</td>
+                                <td class="text-right h6"><span
+                                    class="font-weight-bold">{{ grandTotal | number }}</span>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                      </div>
+                    </div>
+
+                  </mat-tab>
+                  <mat-tab label="ລາຍການອາຫານຕາມ derivery Provider GoTeddy">
                     <div class="table-responsive">
                       <table class="table table-bordered table-hover" style="margin: 0;">
                         <thead class="thead-light">
@@ -55,7 +93,7 @@
                           <th class="text-center h6">ລວມຕົ້ນທຶນ</th>
                         </thead>
                         <tbody>
-                          <tr *ngFor="let trx of foodsTransactions ; let i  = index">
+                          <tr *ngFor="let trx of payment_by_kitchen_derivery ; let i  = index">
                             <td class="text-center">{{ i+1 }}</td>
                             <td class="text-left text-nowrap" style="width: 300px;">{{ trx.oFoodName }}</td>
                             <td class="text-right">{{ trx.quantity |number }}</td>
@@ -63,15 +101,26 @@
                           </tr>
                           <tr>
                             <td class="text-center h6" colspan="2">ລວມ</td>
-                            <td class="text-right h6">{{ countItem | number }}</td>
-                            <td class="text-right h6"><span class="font-weight-bold">{{ grandTotal | number }}</span>
+                            <td class="text-right h6">{{ deriverCountItem | number }}</td>
+                            <td class="text-right h6"><span
+                                class="font-weight-bold">{{ deriverGrandTotal | number }}</span>
                             </td>
                           </tr>
                         </tbody>
                       </table>
                     </div>
-                  </div>
-                </div>
+                  </mat-tab>
+                </mat-tab-group>
+
+
+
+
+
+
+
+
+
+
               </div>
               <div class="col col-md3">
 
