--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -55,11 +55,11 @@
                     <div class="card-header lead">
                       ຍອດຂາຍທັງໝົດ
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="max-height: 30vh;overflow: auto;">
                       <div class="row">
                         <div class="col col-md-1 col-sm-12 text-left text-nowrap h5"></div>
                         <div class="col col-md-3 h5"></div>
-                        <div class="col col-md-2 h5 text-nowrap">ຈຳນວນ</div>
+                        <div class="col col-md-2 h5 text-nowrap text-right">ຈຳນວນ</div>
                         <div class="col col-md-6 h5 text-nowrap text-right">ຍອດເງິນ</div>
                       </div>
                       <div class="row text-nowrap">
@@ -103,7 +103,7 @@
                     <div class="card-header lead">
                       ຍອດຂາຍຕາມ ພະນັກງານຂາຍ
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="max-height: 30vh;overflow: auto;">
                       <div class="row">
                         <div class="col col-md-12" *ngFor="let userTransaction of revByUsersDateRange">
                           <div class="row">
@@ -125,7 +125,7 @@
                     <div class="card-header lead">
                       ລາຍຈ່າຍ ຕາມຄົວ
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="max-height: 30vh;overflow: auto;">
                       <div class="row">
                         <div class="col col-md-12" *ngFor="let ksp of kitchenPayments">
                           <div class="row">
@@ -204,7 +204,6 @@
                   </div>
                 </div>
 
-
               </div>
             </div>
           </div>
@@ -220,7 +219,7 @@
                       ຍອດຂາຍຕາມ ປະເພດອາຫານ
                     </div>
                     <div class="card-body">
-                      <div class="row">
+                      <div class="row" style="max-height: 42vh;overflow: auto;">
                         <div class="col col-md-3 col-sm-12 h5 text-nowrap text-left">ປະເພດອາຫານ</div>
                         <div class="col col-md-2 col-sm-12 h5 text-nowrap text-right">ຈຳນວນ</div>
                         <div class="col col-md-3 col-sm-12 h5 text-nowrap text-right">ທຶນ</div>
@@ -286,7 +285,7 @@
                         <div class="col col-md-3 col-sm-12 h5 text-nowrap text-center">ທຶນ</div>
                         <div class="col col-md-3 col-sm-12 h5 text-nowrap text-center">ຍອດຂາຍ</div>
                       </div>
-                      <div class="row">
+                      <div class="row" style="max-height: 42vh;overflow: auto;">
                         <div class="col col-md-12" *ngFor="let foodsTransaction of revByFoodsDateRange">
                           <div class="row">
                             <div class="col col-md-4 col-sm-12 text-left text-nowrap h5 ">
@@ -312,6 +311,70 @@
               </div>
             </div>
           </div>
+
+          <div class="card">
+            <div class="card-header lead">
+              ລາຍຮັບຈາກຊ່ອງທາງ ບໍລິສັດ ຮັບ-ສົ່ງ
+            </div>
+            <div class="card-body" style="max-height: 80vh;overflow: auto;">
+              <div class="row">
+                <div class="col col-md-8">
+
+                  <div class="row">
+                    <div class="col col-md-12">
+                      <div class="table-responsive">
+                        <table class="table table-hover table-bordered">
+                          <thead class="thead-light">
+                            <tr style="text-transform: capitalize;">
+                              <th scope="col">#</th>
+                              <th scope="col">OrderDate</th>
+                              <th scope="col">refno</th>
+                              <th scope="col">invoice</th>
+                              <th scope="col">GrandTotal (1)</th>
+                              <th scope="col">Rate (2)</th>
+                              <th scope="col">Commission (3)</th>
+                              <th scope="col">Total Costs (4)</th>
+                              <th scope="col">Profit (5)=(1-3)</th>
+                              <th scope="col">Net Profit (5-4)</th>
+                              <th scope="col">View</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr *ngFor="let derivery of derivery_provider_totals; let i = index">
+                              <td class="text-center">{{ i+1 }}</td>
+                              <td class="text-left">{{ derivery.orderDateTime | date: 'dd-MMM-yyyy' }}</td>
+                              <td class="text-left">{{ derivery.refno }}</td>
+                              <td class="text-left">{{ derivery.invoiceno }}</td>
+                              <td class="text-right">{{ derivery.grandtotal | number }}</td>
+                              <td class="text-right">{{ derivery.c_rate }}</td>
+                              <td class="text-right">{{ derivery.commission | number }}</td>
+                              <td class="text-right">{{ derivery.costs | number }}</td>
+                              <td class="text-right">{{ derivery.grandtotal - derivery.commission | number }}</td>
+                              <td class="text-right">
+                                {{ derivery.grandtotal - derivery.commission - derivery.costs| number }}</td>
+                              <td class="text-right"><a class="text-primary" style="cursor: pointer;"
+                                  (click)="viewTransaction(derivery.orderId)">select</a></td>
+                            </tr>
+                            <tr class="table-success" style="font-weight: bolder;">
+                              <td colspan="4" class="text-right">Total</td>
+                              <td class="text-right">{{ deriver_grandtotal |number }}</td>
+                              <td></td>
+                              <td class="text-right">{{ deriver_commission |number }}</td>
+                              <td class="text-right">{{ deriver_costs |number }}</td>
+                              <td class="text-right">{{ deriver_netprofit |number }}</td>
+                              <td class="text-right">{{ deriver_profit |number }}</td>
+                              <td></td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
