--- a/src/app/dialogs/add-food/add-food.component.html
+++ b/src/app/dialogs/add-food/add-food.component.html
@@ -1,84 +1,86 @@
-<h1 mat-dialog-title>ເພີ່ມອາຫານ</h1>
-<div class="alert alert-danger" role="alert" [ngClass]="showAlert">
-  Please correct all detail before save
-</div>
-<form [formGroup]="addFoodForm">
-  <div class="row">
-    <div class="col col-md-4">
-      <img [src]="photoSrc" (click)="fileinput.click()" class="photoDiv shadow p-3 mb-5 bg-white">
-      <input type="file" (change)="uploadPhoto($event.target.files)" #fileinput style="display: none;">
-      <mat-progress-bar color="primary" mode="determinate" [value]="progressBarValue">
-      </mat-progress-bar>
-    </div>
-    <div class="col col-md-8">
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="foodId">ລະຫັດອາຫານ</label>
-          <input type="text" class="form-control" id="foodId" readonly formControlName="foodId" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="food_name">ອາຫານ</label>
-          <input type="text" class="form-control" id="food_name" formControlName="food_name" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="food_name_en">ອາຫານ ພາສາອັງກິດ</label>
-          <input type="text" class="form-control" id="food_name_en" formControlName="food_name_en" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="foodTypeId">ຈັດໃນໝວດ</label>
-          <select class="form-control" id="foodTypeId" required formControlName="foodTypeId">
-            <option value="" disabled>-----------</option>
-            <option *ngFor="let c of foodtypes" value="{{ c.id }}">{{ c.foodTypeName }}
-            </option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="isParent">ເປັນອາຫານຫຼັກ</label>
-          <select class="form-control" id="isParent" required formControlName="isParent"
-            (change)="selectedType($event.target.value)">
-            <option value="" disabled>-----------</option>
-            <option value="0">ອາຫານທົ່ວໄປ</option>
-            <option value="1">ມີອາຫານຍ່ອຍ</option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="kitchenId">ຫ້ອງຄົວ</label>
-          <select class="form-control" id="kitchenId" required formControlName="kitchenId">
-            <option value="" disabled>-----------</option>
-            <option *ngFor="let k of kitchens " value="{{ k.id }}">{{ k.kitchenName }}</option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="cost">ຕົ້ນທືນ</label>
-          <input type="number" class="form-control" id="cost" formControlName="cost" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="price">ລາຄາຂາຍ</label>
-          <input type="number" class="form-control" id="price" formControlName="price" required>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="currencyId">ສະກູນ</label>
-          <select class="form-control" id="currencyId" required formControlName="currencyId">
-            <option value="" disabled>-----------</option>
-            <option *ngFor="let c of currencies " value="{{ c.id }}">{{ c.currency_name }}</option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="discId">ຈານ</label>
-          <select class="form-control" id="discId" required formControlName="discId">
-            <option value="" disabled>-----------</option>
-            <option *ngFor="let d of discs " value="{{ d.id }}">{{ d.disc_name }}</option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="note">ໝາຍເຫດ</label>
-          <input type="text" class="form-control" id="note" formControlName="note">
-        </div>
-        <div class="form-group col-md-12">
-          <button mat-raised-button color="primary" (click)="createFood()" [disabled]="saveDisabled"
-            class="btnSave">Save</button>
+<div style="max-height: 80vh;overflow: auto;">
+  <h1 mat-dialog-title>ເພີ່ມອາຫານ</h1>
+  <div class="alert alert-danger" role="alert" [ngClass]="showAlert">
+    Please correct all detail before save
+  </div>
+  <form [formGroup]="addFoodForm">
+    <div class="row">
+      <div class="col col-md-4">
+        <img [src]="photoSrc" (click)="fileinput.click()" class="photoDiv shadow p-3 mb-5 bg-white">
+        <input type="file" (change)="uploadPhoto($event.target.files)" #fileinput style="display: none;">
+        <mat-progress-bar color="primary" mode="determinate" [value]="progressBarValue">
+        </mat-progress-bar>
+      </div>
+      <div class="col col-md-8">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="foodId">ລະຫັດອາຫານ</label>
+            <input type="text" class="form-control" id="foodId" readonly formControlName="foodId" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="food_name">ອາຫານ</label>
+            <input type="text" class="form-control" id="food_name" formControlName="food_name" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="food_name_en">ອາຫານ ພາສາອັງກິດ</label>
+            <input type="text" class="form-control" id="food_name_en" formControlName="food_name_en" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="foodTypeId">ຈັດໃນໝວດ</label>
+            <select class="form-control" id="foodTypeId" required formControlName="foodTypeId">
+              <option value="" disabled>-----------</option>
+              <option *ngFor="let c of foodtypes" value="{{ c.id }}">{{ c.foodTypeName }}
+              </option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="isParent">ເປັນອາຫານຫຼັກ</label>
+            <select class="form-control" id="isParent" required formControlName="isParent"
+              (change)="selectedType($event.target.value)">
+              <option value="" disabled>-----------</option>
+              <option value="0">ອາຫານທົ່ວໄປ</option>
+              <option value="1">ມີອາຫານຍ່ອຍ</option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="kitchenId">ຫ້ອງຄົວ</label>
+            <select class="form-control" id="kitchenId" required formControlName="kitchenId">
+              <option value="" disabled>-----------</option>
+              <option *ngFor="let k of kitchens " value="{{ k.id }}">{{ k.kitchenName }}</option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="cost">ຕົ້ນທືນ</label>
+            <input type="number" class="form-control" id="cost" formControlName="cost" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="price">ລາຄາຂາຍ</label>
+            <input type="number" class="form-control" id="price" formControlName="price" required>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="currencyId">ສະກູນ</label>
+            <select class="form-control" id="currencyId" required formControlName="currencyId">
+              <option value="" disabled>-----------</option>
+              <option *ngFor="let c of currencies " value="{{ c.id }}">{{ c.currency_name }}</option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="discId">ຈານ</label>
+            <select class="form-control" id="discId" required formControlName="discId">
+              <option value="" disabled>-----------</option>
+              <option *ngFor="let d of discs " value="{{ d.id }}">{{ d.disc_name }}</option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="note">ໝາຍເຫດ</label>
+            <input type="text" class="form-control" id="note" formControlName="note">
+          </div>
+          <div class="form-group col-md-12">
+            <button mat-raised-button color="primary" (click)="createFood()" [disabled]="saveDisabled"
+              class="btnSave">Save</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</form>
+  </form>
+</div>
