--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<footer id="sticky-footer" class="py-2 bg-dark text-white-50 mt-1">
+  <div class="container text-center">
+    <small>Copyright &copy; www.letter-p.info | tel: 030-5123456</small>
+  </div>
+</footer>
