--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -17,7 +17,7 @@
           <div class="card-header">
             <div class="h5">Cashload</div>
           </div>
-          <div class="card-body">
+          <div class="card-body" style="max-height: 70vh;overflow: auto;">
             <div class="table-responsive">
               <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
