--- a/src/app/pages/expenditures/expenditures.component.html
+++ b/src/app/pages/expenditures/expenditures.component.html
@@ -14,9 +14,9 @@
           (click)="openAddExp()">ບັນທຶກລາຍຈ່າຍປະຈຳວັນ</button>
       </div>
     </div>
-    <mat-tab-group>
+    <mat-tab-group style="max-height: 70vh;overflow: auto;">
       <mat-tab label="Records">
-        <div class="table-responsive" style="max-height: 70vh;">
+        <div class="table-responsive">
           <table class="table table-bordered table-hover">
             <thead class="thead-dark">
               <tr>
