--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -23,7 +23,7 @@
       </div>
 
     </div>
-    <mat-tab-group>
+    <mat-tab-group style="max-height: 72vh;overflow: auto;">
 
       <mat-tab label="Products">
         <div class="table-responsive">
