--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<footer id="sticky-footer" class="py-2 bg-dark text-white-50 mt-1">
+<footer id="sticky-footer" class="py-2 bg-dark text-white-50 mt-auto">
   <div class="container text-center">
     <small>Copyright &copy; www.letter-p.info | tel: 030-5123456</small>
   </div>
