add discount management

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -47,8 +47,8 @@
           <div class="textTitle h5">Staff Benefits</div>
         </div>
         <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-          <img src="../../../assets/icons/coupon.svg" class="gridImg" (click)="openCoupon()">
-          <div class="textTitle h5">Coupon</div>
+          <img src="../../../assets/icons/coupon.svg" class="gridImg" (click)="openDiscount()">
+          <div class="textTitle h5">Discounts</div>
         </div>
       </div>
     </ng-container>
