--- a/src/app/dialogs/add-promotion-food/add-promotion-food.component.html
+++ b/src/app/dialogs/add-promotion-food/add-promotion-food.component.html
@@ -1,37 +1,36 @@
 <div class="h4" mat-dialog-title>ເພີມອາຫານ ໂປຣໂມຊັນ</div>
-<form [formGroup]="foodForms">
-  <ng-container *ngIf="data.promotion_type_name.toUpperCase()==='FOOD'; else group">
-
+<form [formGroup]="promotionTranxForm">
+  <ng-container>
     <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="foodId">ອາຫານ</label>
-        <select class="form-control" id="foodId" formControlName="foodId" required formControlName="foodId">
+      <div class="form-group col-md-12">
+        <label for="foodGroup">Group</label>
+        <select class="form-control" id="foodGroup" [(ngModel)]="foodCatName" [ngModelOptions]="{standalone: true}">
           <option value="" disabled>Choose</option>
-          <option *ngFor="let food of foods" value="{{ food.id }}">{{ food.food_name }}</option>
+          <option *ngFor="let f of foodTypes" value="{{ f.id }}">{{ f.foodTypeName }}</option>
         </select>
       </div>
-      <div class="form-group col-md-6">
-        <button mat-flat-button color="primary" class="form-control" style="top:31px;" (click)="savePromotion()"
+      <div class="form-group col-md-12">
+        <label for="foodId">ອາຫານ</label>
+        <select class="form-control" id="foodId" formControlName="foodId" required formControlName="foodId" required>
+          <option value="" disabled>Choose</option>
+          <option *ngFor="let food of foods|foodCategoryPipe: foodCatName" value="{{ food.id }}">{{ food.food_name }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group col-md-12">
+        <label for="discount">Discount Amount</label>
+        <input type="number" class="form-control text-right" id="discount" formControlName="discount" required>
+      </div>
+      <div class="form-group col-md-12">
+        <label for="percentageDiscount">Discount %</label>
+        <input type="number" class="form-control text-right" id="percentageDiscount"
+          formControlName="percentageDiscount" required>
+      </div>
+      <div class="form-group col-md-12">
+        <button mat-flat-button color="primary" class="form-control " style="top:31px;" (click)="savePromotion()"
           id="expiry_date">ບັນທຶກ</button>
       </div>
     </div>
   </ng-container>
-  <ng-template #group>
-    <ng-container>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="foodTypeId">ກຸ່ມ</label>
-          <select class="form-control" id="foodTypeId" formControlName="foodTypeId" required
-            formControlName="foodTypeId">
-            <option value="" disabled>Choose</option>
-            <option *ngFor="let foodtype of foodTypes" value="{{ foodtype.id }}">{{ foodtype.foodTypeName }}</option>
-          </select>
-        </div>
-        <div class="form-group col-md-6">
-          <button mat-flat-button color="primary" class="form-control" style="top:31px;" (click)="savePromotion()"
-            id="expiry_date">ບັນທຶກ</button>
-        </div>
-      </div>
-    </ng-container>
-  </ng-template>
+
 </form>
