--- a/src/app/dialogs/add-food-category/add-food-category.component.html
+++ b/src/app/dialogs/add-food-category/add-food-category.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 </form>
-<div class="foodCatDiv">
+<div class="table-responsive" style="max-height: 60vh;overflow: auto;">
   <table class="table table-bordered table-hover ">
     <thead>
       <th class="text-left">ປະເພດອາຫານ ພາສາອັງກິດ</th>
