--- a/src/app/dialogs/units/units.component.html
+++ b/src/app/dialogs/units/units.component.html
@@ -18,7 +18,7 @@
       <button mat-flat-button color="primary" (click)="updateUnit()">{{ btnText }}</button>
     </div>
   </div>
-  <div>
+  <div class="table-responsive" style="max-height: 40vh;overflow: auto;">
     <table class="table table-bordered">
       <thead class="thead-light">
         <th class="text-center">#</th>
