--- a/src/app/dialogs/view-discount-by-id/view-discount-by-id.component.html
+++ b/src/app/dialogs/view-discount-by-id/view-discount-by-id.component.html
@@ -39,7 +39,7 @@
             </td>
             <ng-template #disableDiscount>
               <td class="text-center">
-                <img src="../../../assets/icons/baseline-remove-24px.svg" style="max-width: 20px;cursor: pointer;"
+                <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
                   (click)="toggleEnable(d.dTranxId, d.dtxEnabled)">
               </td>
             </ng-template>
