--- a/src/app/pages/discounts/discounts.component.html
+++ b/src/app/pages/discounts/discounts.component.html
@@ -1,6 +1,13 @@
-<p class="h4">
-  Discount management
-</p>
+<div class="row">
+  <div class="col">
+    <p class="h4">
+      Discount management
+    </p>
+  </div>
+  <div class="col text-right">
+    <button mat-raised-button color="primary" (click)="openAddPromotion()">Add new</button>
+  </div>
+</div>
 <hr>
 <div class="table-responsive" style="max-height: 80vh;overflow: auto;">
   <table class="table table-bordered">
@@ -11,7 +18,7 @@
       <th scope="col">Valid from</th>
       <th scope="col">Expire</th>
       <th scope="col" class="text-center">Valid</th>
-      <th scope="col" class="text-center">Enabled</th>
+      <th scope="col" class="text-center">Remove</th>
     </thead>
     <tbody>
       <tr *ngFor="let d of disconts; let i = index">
@@ -26,7 +33,7 @@
         </td>
         <ng-template #noValid>
           <td class="text-center">
-            <img src="../../../assets/icons/baseline-remove-24px.svg" style="max-width: 20px;cursor: pointer;"
+            <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
               (click)="toggleValid(d.id, d.discount_valid)">
           </td>
         </ng-template>
@@ -37,7 +44,7 @@
         </td>
         <ng-template #disableDiscount>
           <td class="text-center">
-            <img src="../../../assets/icons/baseline-remove-24px.svg" style="max-width: 20px;cursor: pointer;"
+            <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
               (click)="toggleEnable(d.id, d.enabled)">
           </td>
         </ng-template>
