--- a/src/app/pages/discounts/discounts.component.html
+++ b/src/app/pages/discounts/discounts.component.html
@@ -21,34 +21,66 @@
       <th scope="col" class="text-center">Remove</th>
     </thead>
     <tbody>
-      <tr *ngFor="let d of disconts; let i = index">
-        <td class="text-center">{{ i+1 }}</td>
-        <td class="text-left" style="cursor: pointer;" (click)="openCouponView(d)">{{ d.discount_code }}</td>
-        <td class="text-left">{{ d.discount_description }}</td>
-        <td class="text-left">{{ d.discount_valid_from |date: 'dd-MMM-yy' }}</td>
-        <td class="text-left">{{ d.discount_valid_thru |date: 'dd-MMM-yy' }}</td>
-        <td class="text-center" *ngIf="d.discount_valid; else noValid">
-          <img src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;"
-            (click)="toggleValid(d.id, d.discount_valid)">
-        </td>
-        <ng-template #noValid>
-          <td class="text-center">
-            <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
+      <ng-container *ngFor="let d of disconts; let i = index">
+        <tr [class.table-danger]="d.discount_valid === 0">
+          <td class="text-center">{{ i+1 }}</td>
+          <td class="text-left" style="cursor: pointer;" (click)="openCouponView(d)">{{ d.discount_code }}</td>
+          <td class="text-left">{{ d.discount_description }}</td>
+          <td class="text-left">{{ d.discount_valid_from |date: 'dd-MMM-yy' }}</td>
+          <td class="text-left">{{ d.discount_valid_thru |date: 'dd-MMM-yy' }}</td>
+          <td class="text-center" *ngIf="d.discount_valid; else noValid">
+            <img src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;"
               (click)="toggleValid(d.id, d.discount_valid)">
           </td>
-        </ng-template>
+          <ng-template #noValid>
+            <td class="text-center">
+              <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
+                (click)="toggleValid(d.id, d.discount_valid)">
+            </td>
+          </ng-template>
 
-        <td class="text-center" *ngIf="d.enabled; else disableDiscount"><img
-            src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;"
-            (click)="toggleEnable(d.id, d.enabled)">
-        </td>
-        <ng-template #disableDiscount>
-          <td class="text-center">
-            <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
+          <td class="text-center" *ngIf="d.enabled; else disableDiscount"><img
+              src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;"
               (click)="toggleEnable(d.id, d.enabled)">
           </td>
+          <ng-template #disableDiscount>
+            <td class="text-center">
+              <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
+                (click)="toggleEnable(d.id, d.enabled)">
+            </td>
+          </ng-template>
+        </tr>
+        <ng-template>
+          <tr class="table-danger">
+            <td class="text-center">{{ i+1 }}</td>
+            <td class="text-left" style="cursor: pointer;" (click)="openCouponView(d)">{{ d.discount_code }}</td>
+            <td class="text-left">{{ d.discount_description }}</td>
+            <td class="text-left">{{ d.discount_valid_from |date: 'dd-MMM-yy' }}</td>
+            <td class="text-left">{{ d.discount_valid_thru |date: 'dd-MMM-yy' }}</td>
+            <td class="text-center" *ngIf="d.discount_valid; else noValid">
+              <img src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;"
+                (click)="toggleValid(d.id, d.discount_valid)">
+            </td>
+            <ng-template #noValid>
+              <td class="text-center">
+                <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
+                  (click)="toggleValid(d.id, d.discount_valid)">
+              </td>
+            </ng-template>
+
+            <td class="text-center" *ngIf="d.enabled; else disableDiscount"><img
+                src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;"
+                (click)="toggleEnable(d.id, d.enabled)">
+            </td>
+            <ng-template #disableDiscount>
+              <td class="text-center">
+                <img src="../../../assets/icons/cancel.svg" style="max-width: 20px;cursor: pointer;"
+                  (click)="toggleEnable(d.id, d.enabled)">
+              </td>
+            </ng-template>
+          </tr>
         </ng-template>
-      </tr>
+      </ng-container>
     </tbody>
   </table>
 </div>
