--- a/src/app/pages/discounts/discounts.component.html
+++ b/src/app/pages/discounts/discounts.component.html
@@ -40,7 +40,7 @@
           </ng-template>
 
           <td class="text-center" *ngIf="d.enabled; else disableDiscount"><img
-              src="../../../assets/icons/Check_green_icon.svg.png" style="max-width: 20px;cursor: pointer;"
+              src="../../../assets/icons/baseline-delete-24px.svg" style="max-width: 20px;cursor: pointer;"
               (click)="toggleEnable(d.id, d.enabled)">
           </td>
           <ng-template #disableDiscount>
