--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -74,13 +74,16 @@
 
             <mat-divider></mat-divider>
             <mat-card-content>
+              <!--
+
+
               <mat-list>
-                <mat-list-item>
+                <mat-list-item style="width: 100%;">
                   <div class="row" style="width: 100%;">
-                    <div class="col col-sm-12 col-md-3 text-left font-weight-bold">ອາຫານ</div>
-                    <div class="col col-sm-12 col-md-2 text-left font-weight-bold">ຈານ</div>
+                    <div class="col col-sm-12 col-md-2 text-left font-weight-bold">ອາຫານ</div>
                     <div class="col col-sm-12 col-md-1 text-right font-weight-bold">ຈຳນວນ</div>
                     <div class="col col-sm-12 col-md-2 text-right font-weight-bold">ລາຄາ</div>
+                    <div class="col col-sm-12 col-md-1 text-right font-weight-bold">ສ່ວນລຸດ</div>
                     <div class="col col-sm-12 col-md-1 text-right font-weight-bold">ລວມ</div>
                     <div class="col col-sm-12 col-md-2 text-center font-weight-bold">ຂໍ້ຄວາມ</div>
                     <div class="col col-sm-12 col-md-1 text-right font-weight-bold">ຈັດການ</div>
@@ -88,26 +91,21 @@
                 </mat-list-item>
                 <mat-divider></mat-divider>
                 <div class="listDiv">
-                  <mat-list-item *ngFor="let cart of virtualCart" class="align-middle">
-                    <div class="row align-middle" style="width: 100%;">
-                      <div class="col col-sm-12 col-md-3 text-left align-middle">{{ cart.food }}
+                  <mat-list-item *ngFor="let cart of virtualCart" class="align-middle"
+                    style="width: 100%;min-height: 100px;vertical-align: middle;">
+                    <div class="row" style="width: 100%;">
+                      <div class="col col-sm-12 col-md-2 text-left align-middle" style="cursor: pointer;"
+                        (click)="discSelect()">{{ cart.food }}
                         {{ cart.subFood }} <span class="badge badge-pill badge-danger"
                           style="font-size: 14px;">{{ cart.disc }}</span>
                       </div>
-                      <div class="col col-sm-12 col-md-2 text-left align-middle">
-                        <select class="form-control" (change)="discSelected($event.target.value, cart)">
-                          <option value="-1" disabled>ເລືອກ</option>
-                          <option value="-1">ປົກກະຕິ</option>
-                          <option value="{{ disc.id }}" *ngFor="let disc of discs">
-                            {{ disc.disc_name }}
-                          </option>
-                        </select>
-                      </div>
+
                       <div class="col col-sm-12 col-md-1 text-right align-middle" style="cursor: pointer;"
                         (click)="openQuantity(cart)">
                         {{ cart.quantity | number }}
                       </div>
                       <div class="col col-sm-12 col-md-2 text-right align-middle">{{ cart.price | number }}</div>
+                      <div class="col col-sm-12 col-md-1 text-right align-middle">0</div>
                       <div class="col col-sm-12 col-md-1 text-right align-middle"> {{ cart.total | number }}</div>
                       <div class="col col-sm-12 col-md-2 text-left align-middle">{{ cart.note }}</div>
                       <div class="col col-sm-12 col-md-1 text-center align-middle">
@@ -122,7 +120,7 @@
                   </mat-list-item>
                 </div>
                 <mat-divider></mat-divider>
-                <!--
+
                   <mat-list-item>
                   <div class="row">
                     <div class="col col-md-9 text-right h5" style="position: absolute; right:150px;">ຍອດລວມ
@@ -131,9 +129,46 @@
                       col col-md-3 text-right h5" style="position: absolute; right:18px;">{{ total | number }}</div>
                   </div>
                 </mat-list-item>
-                -->
+
 
               </mat-list>
+              -->
+
+              <div class="table-responsive">
+                <table class="table table-bordered table-hover">
+                  <thead style="font-weight: bolder;" class="thead-dark">
+                    <th scope="col" class="text-left">ອາຫານ</th>
+                    <th scope="col" class="text-center">ຈານ</th>
+                    <th scope="col" class="text-center">ຈຳນວນ</th>
+                    <th scope="col" class="text-center">ລາຄາ</th>
+                    <th scope="col" class="text-center">ສ່ວນລຸດ</th>
+                    <th scope="col" class="text-center">ລວມ</th>
+                    <th scope="col" class="text-center">ຂໍ້ຄວາມ</th>
+                    <th scope="col" class="text-center">ຈັດການ</th>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let cart of virtualCart">
+                      <td class="text-left">{{ cart.food }}</td>
+                      <td class="text-left" style="cursor: pointer;" (click)="discSelect(cart)">{{ cart.disc }}</td>
+                      <td class="text-right" style="cursor: pointer;" (click)="openQuantity(cart)">
+                        {{ cart.quantity | number }}</td>
+                      <td class="text-right">{{ cart.price | number }}</td>
+                      <td class="text-right">{{ cart.discount | number }}</td>
+                      <td class="text-right">{{ cart.total | number }}</td>
+                      <td class="text-left">{{ cart.note }}</td>
+                      <td class="text-center">
+                        <img src="../../../assets/icons/baseline-note-24px.svg" style="cursor: pointer;"
+                          (click)="addnote(cart)">
+                        <img src="../../../assets/icons/baseline-delete-24px.svg" style=" cursor: pointer;"
+                          (click)="removeFromlist(cart)">
+                        <img src="../../../assets/icons/baseline-confirmation_number-24px.svg" style=" cursor: pointer;"
+                          (click)="addCoupon()">
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
             </mat-card-content>
           </mat-card>
           <mat-card class="paymentCard">
