--- a/src/app/pages/memberlists/memberlists.component.html
+++ b/src/app/pages/memberlists/memberlists.component.html
@@ -53,7 +53,8 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let member of members|memberPipe: memberCardNo|memberByPhone:phone;let i = index">
+                  <tr *ngFor="let member of members|memberPipe: memberCardNo|memberByPhone:phone;let i = index"
+                    [ngClass]="{ 'table-danger':!member.enabled }">
                     <td class="text-center align-middle">{{ i + 1 }}</td>
                     <td class="text-left align-middle">{{ member.cardNo }}</td>
                     <td class="text-left align-middle" (click)="viewMemberInfo(member.mId,member.cardNo)"
@@ -76,13 +77,13 @@
                       matTooltipPosition="right" (click)="viewTopTenTransactions(member.mId,member.points)">
                       {{ member.points | number }}</td>
                     <td class="text-left align-middle">{{ member.createdAt | date: 'dd-MMM-yyyy' }}</td>
-                    <td class="text-left align-middle" *ngIf="member.enabled;else inActive">
-                      <i class="fas fa-circle" style="color: #10C369;"></i><span class="ml-1"
+                    <td class="text-left align-middle " *ngIf="member.enabled;else inActive">
+                      <i class="fas fa-circle " style="color: #10C369;"></i><span class="ml-1"
                         (click)="toggleActive(member)" style="cursor: pointer;">Active</span>
                     </td>
                     <ng-template #inActive>
                       <td class="text-left align-middle">
-                        <i class="fas fa-circle" style="color: #FF5A5B;"></i>
+                        <i class="fas fa-circle " style="color: #FF5A5B;"></i>
                         <span class="ml-1" (click)="toggleActive(member)" style="cursor: pointer;">Suspended</span>
                       </td>
                     </ng-template>
