--- a/src/app/dialogs/member-redim/member-redim.component.html
+++ b/src/app/dialogs/member-redim/member-redim.component.html
@@ -31,7 +31,7 @@
   <hr>
   <div class="row">
     <div class="col text-left">
-      <button mat-button color="warn" style="width: 150px;">ຍົກເລິກ</button>
+      <button mat-button color="warn" style="width: 150px;" (click)="closeDialog()">ຍົກເລິກ</button>
     </div>
     <div class="col text-right">
       <button mat-flat-button color="warn" [disabled]="btnSaveDisable" style="width: 150px;"
